--- a/neco-app/resources/sass/app.scss
+++ b/neco-app/resources/sass/app.scss
@@ -5,7 +5,7 @@
 @import 'variables';
 
 // Bootstrap
-// @import '~bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/bootstrap';
 
 //vuetify
 @import '~vuetify/dist/vuetify.min.css';
